<resources>
    <string name="app_name">RoomFndr</string>
    <string name="find_room">find a room</string>
    <string name="room_request">make a room request</string>
    <string name="search_title">Available Rooms:</string>
    <string name="building">Building</string>
    <string name="floor">Floor</string>
    <string name="search_results">Search Results:</string>
    <string name="favorites">Favorites</string>
    <string name="my_favorite_rooms">My Favorite Rooms:</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="search">Search</string>
    <string name="room_nbr">Room Number</string>
    <string name="share_room">Share this room</string>
    <string name="email_osl">Email OSL to Reserve</string>
    <string name="add_to_favs">Add to Favorites</string>
    <string name="room_name">Room Name</string>
    <string name="hint">Enter a room...</string>
    <string name="back_arrow"><b>←</b></string>
    <string name="available">Room Availability</string>
    <string name="id_number">id number</string>
</resources>
