<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/findRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_room"
        android:layout_below="@+id/appTitleTextView"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:onClick="findRoom"
        />

    <Button
        android:id="@+id/roomRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_request"
        android:layout_below="@+id/findRoomButton"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:onClick="roomRequest"
         />



</RelativeLayout>