<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/favoritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/favorites"
        android:onClick="goToFavorites"/>

    <ImageButton
        android:id="@+id/backButtonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="goBack"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:text="@string/search_title"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/buildingEditText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName" />

    <ListView
        android:id="@+id/searchResultsListView"
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:layout_below="@id/buildingEditText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp" />




</RelativeLayout>