<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/roomNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/room_nbr" />

    <ImageButton
        android:id="@+id/backButtonSearchResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:onClick="goBack"/>

    <ImageButton
        android:id="@+id/shareThisRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="144dp"
        app:srcCompat="@android:drawable/ic_menu_set_as" />

    <ImageButton
        android:id="@+id/emailOSLButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/shareThisRoomButton"
        android:layout_marginBottom="203dp"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <ImageButton
        android:id="@+id/addFavoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/shareThisRoomButton"
        android:layout_marginBottom="95dp"
        app:srcCompat="@android:drawable/btn_star" />

    <TextView
        android:id="@+id/shareRoomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="125dp"
        android:layout_marginTop="161dp"
        android:text="@string/share_room" />

    <TextView
        android:id="@+id/emailOSLTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/shareRoomTextView"
        android:layout_marginBottom="219dp"
        android:text="@string/email_osl" />

    <TextView
        android:id="@+id/addFavoriteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/shareRoomTextView"
        android:layout_marginBottom="114dp"
        android:text="@string/add_to_favs" />
</RelativeLayout>